--- a/Wstern2/Assembly-CSharp.csproj
+++ b/Wstern2/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\3DModels\NewBehaviourScript.cs" />
     <Compile Include="Assets\Scripts\Controllers\PersonControl.cs" />
     <Compile Include="Assets\Scripts\ServerClient\PhotonManager.cs" />
     <Reference Include="Unity.Timeline.Editor">
