--- a/Wstern2/Assembly-CSharp.csproj
+++ b/Wstern2/Assembly-CSharp.csproj
@@ -208,6 +208,7 @@
     <Compile Include="Assets\PhotonChatApi\ChatState.cs" />
     <Compile Include="Assets\PhotonChatApi\ChatUserStatus.cs" />
     <Compile Include="Assets\PhotonChatApi\IChatClientListener.cs" />
+    <Compile Include="Assets\Scripts\Controllers\GunController.cs" />
     <Compile Include="Assets\Scripts\Controllers\MouseController.cs" />
     <Compile Include="Assets\Scripts\Controllers\PersonControl.cs" />
     <Compile Include="Assets\Scripts\ServerClient\PhotonManager.cs" />
